@startuml Server Class Diagram

package "server" {
    class Server {
        -server: Server
        -dictionary: ConcurrentHashMap<String, String>
        -clientIDCounter: int
        -clientCount: int
        -userMap: ConcurrentHashMap<Socket, String>
        -dictionaryManager: DictionaryManager
        -serverSocket: ServerSocket
        -port: int
        -dictionaryFile: String
        +main(args: String[]): void
        +runServer(): void
        +checkArguments(args: String[]): boolean
    }

    class ServerGUI {
        -frame: JFrame
        +outputArea: JTextArea
        +textField: JTextField
        +userListModel: DefaultListModel<String>
        +userList: JList<String>
        +logArea: JTextArea
        +ServerGUI()
        +run(): void
        -initialize(): void
    }

    class RequestHandler {
        -clientSocket: Socket
        -reader: BufferedReader
        -writer: BufferedWriter
        -dictionaryManager: DictionaryManager
        +RequestHandler(socket: Socket, dictionaryManager: DictionaryManager)
        +run(): void
        -handleAdd(jsonRequest: JSONObject): void
        -handleQuery(jsonRequest: JSONObject): void
        -handleDelete(jsonRequest: JSONObject): void
        -handleAddMeaning(jsonRequest: JSONObject): void
        -handleUpdate(jsonRequest: JSONObject): void
        -createJsonResponse(status: String, message: String): String
        -sendResponse(message: String): void
        -sendErrorResponse(errorMsg: String): void
        -log(message: String): void
        -getClientInfo(): String
    }

    class DictionaryManager {
        -dictionaryFile: String
        -dictionary: ConcurrentHashMap<String, String>
        +DictionaryManager(dictionaryFile: String, dictionary: ConcurrentHashMap<String, String>)
        +loadDictionary(): void
        +saveDictionary(): void
        +updateDisplay(): void
    }

    ' Relationships
    Server --> ServerGUI : creates
    Server --> DictionaryManager : creates
    Server --> RequestHandler : creates
    RequestHandler --> DictionaryManager : uses
    DictionaryManager --> ServerGUI : updates display
    ServerGUI --> Server : displays server info
}

@enduml 